--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
 {% block body %}
-    <div class="container">
-    </div>
-{% endblock %}
+        <div class="container">
+        </div>
+{%- endblock %}
