--- a/static/general.html
+++ b/static/general.html
@@ -1,14 +1,14 @@
 
         <!--Import Font Awesome-->
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.css') }}">
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.css') }}" media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}" media="screen,projection"/>
         <!--Import general styles-->
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
         <!--Import jQuery before materialize.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.1.0.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
         <!--Import materialize.js-->
-        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <!--Import angular.min.js-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
 
