Store data on client side not server

--- a/schedule/static/schedule.html
+++ b/schedule/static/schedule.html
@@ -13,7 +13,7 @@
     </head>
 
     <body class="grey lighten-3">
-        <div class="container" ng-controller="ctrl" ng-init="getSchedule()">
+        <div class="container" ng-controller="ctrl" ng-init="initialize()">
             <div class="row hide-on-small-only"></div>
             <div class="row" id="card">
                 <div class="col s12">
