--- a/static/general.html
+++ b/static/general.html
@@ -5,12 +5,14 @@
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}" media="screen,projection"/>
         <!--Import general styles-->
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/general.css') }}">
-        <!--Import jQuery before materialize.js-->
+        <!--Import jQuery-x.min.js before materialize.min.js-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.1.0.min.js') }}"></script>
-        <!--Import materialize.js-->
+        <!--Import materialize.min.js-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <!--Import angular.min.js-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
+        <!--Import angular-local-storage.min.js-->
+        <script type="text/javascript" src="{{ url_for('static', filename='js/angular-local-storage.min.js') }}"></script>
 
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
